# SNLS

./: .gitignore  CMakeLists.txt  README.md  SNLS_NLSPowell.h  SNLS_NewtonBB.h  SNLS_TrDLDenseG.cxx  SNLS_TrDLDenseG.h  SNLS_TrDLDenseG_Batch.h  SNLS_base.h  SNLS_cuda_portability.h  SNLS_device_forall.cxx  SNLS_lup_solve.cc  SNLS_lup_solve.h  SNLS_memory_manager.cxx  SNLS_memory_manager.h  SNLS_port.h  SNLS_testdriver.cc  SNLS_testdriver_powell.cc  SetupSNLS.cmake
Win32/: SNLS_config.h  snls_static.vcxproj  snls_static.vcxproj.filters
cmake/: CMakeBasics.cmake  SNLSOptions.cmake
cmake/thirdpartylibraries/: FindCHAI.cmake  FindCUB.cmake  FindRAJA.cmake  FindUmpire.cmake  Findcamp.cmake  SetupThirdPartyLibraries.cmake
src/: CMakeLists.txt  SNLS-config.cmake.in  SNLS_Dogleg.h  SNLS_Dogleg_Batch.h  SNLS_HybrdTrDLDenseG.h  SNLS_NLSPowell.h  SNLS_NewtonBB.h  SNLS_TrDLDenseG.h  SNLS_TrDLDenseG_Batch.h  SNLS_TrDelta.h  SNLS_base.h  SNLS_config.h.in  SNLS_cuda_portability.h  SNLS_device_forall.cxx  SNLS_device_forall.h  SNLS_gpu_portability.h  SNLS_kernels.h  SNLS_kernels_batch.h  SNLS_linalg.h  SNLS_lup_solve.h  SNLS_memory_manager.cxx  SNLS_memory_manager.h  SNLS_port.h  SNLS_qr_solve.h  SNLS_unused.h  SNLS_view_types.h
test/: CMakeLists.txt  CMakeLists.txt~  SNLS_batch_testdriver.cc  SNLS_benchmark.cc  SNLS_forall_subviews.cxx  SNLS_mm.cxx  SNLS_testdriver.cc  SNLS_testdriver_hybrd.cc  SNLS_testdriver_powell.cc  SNLS_testmodels.h  SNLS_view_tests.cc  chai_min_exp.cxx
